5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_1278.log
== TEST (2019-06-26 11:47:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))

i = (v1%10) - 1
j = (v2%10) - 1
print(i)
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:52:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 == -1):
	a = a + tempo[i,j]
	v1 = v2
	v2 = array(eval(input("Digite a cidade: ")))
	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:53:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 == -1):
		a = a + tempo[i,j]
		v1 = v2
		v2 = array(eval(input("Digite a cidade: ")))
	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:53:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 == -1):
		a = a + tempo[i,j]
		v1 = v2
	
v2 = array(eval(input("Digite a cidade: ")))
	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:54:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 == -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))
	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:55:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 =! -1):
		a = a + tempo[i,j]
		v1 = v2
	
v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
File "XXXX", line 10
    while	(v2 =! -1):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:55:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:55:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 11:56:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- EXECUTION TIME:
1.0225
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:56:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:57:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 11:57:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 11:59:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- EXECUTION TIME:
1.22627
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
75
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
14
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:01:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1 ande v1 != 1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
File "XXXX", line 10
    while	(v2 != -1 ande v1 != 1):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:02:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
i = (v1%10) - 1
j = (v2%10) - 1
a = 0
while	(v2 != -1 and v1 != 1):
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 12:03:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a = 0
while	(v2 != -1 and v1 != 1):
		i = (v1%10) - 1
		j = (v2%10) - 1
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 12:03:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v1 = array(eval(input("Digite a cidade: ")))
v2 = array(eval(input("Digite a cidade: ")))
tempo = array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a = 0
while	(v2 != -1 and v1 != 1):
		i = (v1%10) - 1
		j = (v2%10) - 1
		a = a + tempo[i,j]
		v1 = v2
	
		v2 = array(eval(input("Digite a cidade: ")))	
print(a)
	
-- EXECUTION TIME:
1.09886
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
